Changes
=======

2.5.10a1-unicodefix (2011-03-07)
--------------------------------

* fix unicode problem when groups contain special characters (eg: àèìòù).
  [mirco]
* fixed the send of images that not works properly when resolveUID is activated
  [mirco]
* fix unicode problem when title of issues contain special characters (eg: àèìòù).
  [mirco]

2.5.10a1 (2011-02-15)
---------------------

* plone.app.testing test setup added.
  [timo]
  
* Do not exclude ENL content types from navigation on a content object level.
  Exclude them on content type level in the GS profile.
  [timo]

* fix UnboundLocalError which comes with the try except statement
  [derstappenit]

* fix AttributeError get_all_memberproperties if fmp is available but not installed in the quickinstaller
  [derstappenit]


2.5.9 (15/02/2011)
------------------

* fix UnboundLocalError: local variable 'o' referenced before assignment, which come with the try except to cache image handling errors
  [derstappenit]


2.5.8 (14/02/2011)
------------------

* fix optional use of fmp
  [derstappenit]
  
* only add default_template if doesnt exists, this fix error in archetypes_tool on update schema
  [derstappenit]
  
* add a BooleanField sendToAllPloneMembers, which can be used to address all existing plone members in a newsletter, no need to select all every time new user are available 
  [derstappenit]

* fix url handlink for links and images if url contains empty spaces, add z3 resource image support, add images only to html part of the email
  [derstappenit]

* cache exception if broken img tags exist that can't be resolved by restrictedTraverse, but log the error
  [derstappenit]

2.5.7 (08/02/2011)
------------------

* Do not encode email addresses when exporting subscribers.
  [timo]

* Make sure the url variable is always set in the handle_starttag method of 
  the ENLHTMLParser.
  [timo]

* Fix CSV import with special characters.
  [timo]
  